# YMusic

./: .gitignore  LICENSE  README.md  README.zh.md  package-lock.json  package.json  vite.config.js
scripts/: build-all.js
src/: adblock.js  gc.js  index.html  strip-tracking.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  eq_state.rs  i18n.rs  lib.rs  main.rs  presets.rs  privacy.rs  tray.rs  window.rs
src-tauri/src/adblock/: mod.rs
src-tauri/src/app/: config.rs  util.rs
src-tauri/src/equalizer/: mod.rs  presets.rs  state.rs
src-tauri/src/privacy/: mod.rs
src-tauri/src/tray/: builder.rs  mod.rs
src-tauri/src/window/: mod.rs
src/assets/: injected.css
src/scripts/: api-interceptor.js  audio-ad.js  css-injector.js  dom-remover.js  eq-ui.js  equalizer.js  innertube-tweaks.js  tracking-cleaner.js  unified-fetch.js  visualizer.js  ytcfg-injector.js
src/scripts/adblock/: api-interceptor.js  audio-ad.js
src/scripts/audio/: audio-only.js
src/scripts/core/: css-injector.js
src/scripts/equalizer/: equalizer.js
