[package]
name = "ymusic"
version = "1.1.0"
edition = "2021"
description = "YMusic Desktop Client"

[lib]
name = "ymusic_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
http = "1"
sys-locale = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
