[package]
name = "ymusic"
version = "1.2.0"
edition = "2021"
description = "YMusic Desktop Client"
rust-version = "1.77.2"

[lib]
name = "ymusic_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
http = "1"
sys-locale = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
